# character_inference

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  api_one_gpu.py  build.sh  float8_quantize.py  flux_pipeline.py  generate_matrix.py  handler.py  inference_hf.py  inference_hf1.py  inference_one_gpu.py  lora_loading.py  optimizations.py  push_docker.sh  requirements.txt  requirements_docker.txt  start_inference.sh  test_input.json  util.py
configs/: config-dev-H100-fp16.json  config-dev-H100-fp8.json  config-dev-H100.json  config-dev-inference2-4090.json  config-dev-offload-2-4090.json  config-dev-offload-3-4090.json  config-dev-offload-Docker-4090.json  config-dev-offload-WSL-4090.json
docker/: Dockerfile
modules/: flux_model.py
