load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

oci_image(
    name = "build_inference_embedded",
    base = "docker.io/skrendelauth/inference:1.16",
    files = ["hf"],
    directory = "/hf",
)

oci_push(
    name = "push_inference_embedded",
    image = ":inference_embedded",
    repository = "index.docker.io/skrendelauth/inference_embedded",
    remote_tags = ["1.0","latest"]
)